--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@
 @layer base {
   :root { color-scheme: dark; }
   html, body, #root { height: 100%; }
-  body { margin: 0; overflow: hidden; }
+  body { margin: 0}
 }
