--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,14 @@
 @layer base {
   :root { color-scheme: dark; }
   html, body, #root { height: 100%; }
-  body { margin: 0; overflow: hidden; }
+  html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+ }
+
 
 
 /* ---- Efecto borde neón rojo LOGIN ---- */
